Fix async login bug